# auto-syndicate

./: .gitignore  DELIVERABLES.md  DEMO_SCRIPT.md  DEPLOYMENT.md  MISSION_GUIDE.md  PROJECT.md  QUICKSTART.md  README.md  dev.sh  package.json
apps/api/: .env.example  .gitignore  Dockerfile  README.md  main.py  package.json  pyproject.toml
apps/api/agents/: crew_agents.py
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/signup/: page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/allocate/results/: page.tsx
apps/web/src/app/analytics/: page.tsx
apps/web/src/app/contact/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/features/: page.tsx
apps/web/src/app/marketplace/: page.tsx
apps/web/src/app/portfolio/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/secondary/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/: activity-center.tsx  ai-chat.tsx  button.tsx  card.tsx  command-palette.tsx  input.tsx  loading.tsx  loan-comparison.tsx  navigation.tsx  notifications.tsx  providers.tsx  terminal-log.tsx  tour.tsx
apps/web/src/components/charts/: BarChart.tsx  CompositionChart.tsx  PerformanceChart.tsx  RadarChart.tsx
apps/web/src/lib/: auth.ts  toast-context.tsx  utils.ts  websocket-context.tsx
docs/: base-idea.md  hackathon.md  mvp.md  technologies.md
scripts/: seed-demo.ts
(+8 files in other folders)
