[tool.poetry]
name = "autosyndicate-api"
version = "1.0.0"
description = "AutoSyndicate ML API - AI-powered loan processing microservice"
authors = ["AutoSyndicate Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
langchain = "^0.3.0"
langchain-groq = "^0.2.0"
langchain-google-genai = "^2.0.0"
crewai = "^0.80.0"
scikit-learn = "^1.5.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
qdrant-client = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
black = "^24.0.0"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
